arrow button small devices fixed

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -92,3 +92,7 @@
 .single-portfolio-menu {
     margin-top: 3%;
 }
+
+.arrow-container {
+    bottom: 5px;
+}
